# regwin32

./: CHANGELOG.md  CMakeLists.txt  README.md
include/: regwin32.h
lib/: CMakeLists.txt  regwin32.cpp
